# fht-compositor-ipc-qml-plugin

./: CMakeLists.txt  README.md  default.nix  flake.nix
src/: CMakeLists.txt  ipc.cpp  ipc.hpp  monitors.cpp  monitors.hpp  plugin.cpp  workspaces.cpp  workspaces.hpp
